--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-pell-rich-editor",
+  "name": "@liukai/react-native-pell-rich-editor",
   "description": "React Native Rich Editor",
-  "version": "1.8.8",
+  "version": "1.0.0",
   "main": "src/index.js",
   "license": "MIT",
   "private": false,
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wxik/react-native-rich-editor.git"
+    "url": "https://github.com/liukai-2p/react-native-rich-editor.git"
   },
   "dependencies": {
   },
