--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "private": false,
   "author": {
-    "name": "wxik",
-    "email": "io@wxik.com"
+    "name": "liukai2_p",
+    "email": "291250358@qq.com"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
   "peerDependencies": {
     "react-native": ">=0.50.0",
     "react-native-webview": ">=7.5.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
